Bug 230157 - nsDeviceContextSpecG prefs issues. Patch by Ryan Jones <sciguyryan+bugzilla@gmail.com>. r+sr=roc.