widget/src/gtk2/nsDeviceContextSpecG.cpp
@@ -721,50 +721,48 @@ NS_IMETHODIMP nsDeviceContextSpecGTK::ClosePrintManager()
  * - Get prefs
  */
 static
-nsresult CopyPrinterCharPref(nsIPrefBranch *pref, const char *modulename, const char *printername, const char *prefname, char **return_buf)
+nsresult CopyPrinterCharPref(nsIPrefBranch *pref, const char *modulename, const char *printername,
+                             const char *prefname, nsXPIDLCString &return_buf)
 {
   DO_PR_DEBUG_LOG(("CopyPrinterCharPref('%s', '%s', '%s')\n", modulename, printername, prefname));
 
-  NS_ENSURE_ARG_POINTER(return_buf);
-
-  nsXPIDLCString name;
   nsresult rv = NS_ERROR_FAILURE;
  
   if (printername && modulename) {
     /* Get prefs per printer name and module name */
-    name = nsPrintfCString(512, "print.%s.printer_%s.%s", modulename, printername, prefname);
+    nsPrintfCString name(512, "print.%s.printer_%s.%s", modulename, printername, prefname);
     DO_PR_DEBUG_LOG(("trying to get '%s'\n", name.get()));
-    rv = pref->GetCharPref(name, return_buf);
+    rv = pref->GetCharPref(name.get(), getter_Copies(return_buf));
   }
   
   if (NS_FAILED(rv)) { 
     if (printername) {
       /* Get prefs per printer name */
-      name = nsPrintfCString(512, "print.printer_%s.%s", printername, prefname);
+      nsPrintfCString name(512, "print.printer_%s.%s", printername, prefname);
       DO_PR_DEBUG_LOG(("trying to get '%s'\n", name.get()));
-      rv = pref->GetCharPref(name, return_buf);
+      rv = pref->GetCharPref(name.get(), getter_Copies(return_buf));
     }
 
     if (NS_FAILED(rv)) {
       if (modulename) {
         /* Get prefs per module name */
-        name = nsPrintfCString(512, "print.%s.%s", modulename, prefname);
+        nsPrintfCString name(512, "print.%s.%s", modulename, prefname);
         DO_PR_DEBUG_LOG(("trying to get '%s'\n", name.get()));
-        rv = pref->GetCharPref(name, return_buf);
+        rv = pref->GetCharPref(name.get(), getter_Copies(return_buf));
       }
       
       if (NS_FAILED(rv)) {
         /* Get prefs */
-        name = nsPrintfCString(512, "print.%s", prefname);
+        nsPrintfCString name(512, "print.%s", prefname);
         DO_PR_DEBUG_LOG(("trying to get '%s'\n", name.get()));
-        rv = pref->GetCharPref(name, return_buf);
+        rv = pref->GetCharPref(name.get(), getter_Copies(return_buf));
       }
     }
   }
 
 #ifdef PR_LOG  
   if (NS_SUCCEEDED(rv)) {
-    DO_PR_DEBUG_LOG(("CopyPrinterCharPref returning '%s'.\n", *return_buf));
+    DO_PR_DEBUG_LOG(("CopyPrinterCharPref returning '%s'.\n", return_buf.get()));
   }
   else
   {
@@ -892,7 +890,7 @@ NS_IMETHODIMP nsPrinterEnumeratorGTK::InitPrintSettingsFromPrinter(const PRUnich
   
   /* Set filename */
   nsXPIDLCString filename;
-  if (NS_FAILED(CopyPrinterCharPref(pPrefs, nsnull, printerName, "filename", getter_Copies(filename)))) {
+  if (NS_FAILED(CopyPrinterCharPref(pPrefs, nsnull, printerName, "filename", filename))) {
     const char *path;
   
     if (!(path = PR_GetEnv("PWD")))
@@ -901,7 +899,7 @@ NS_IMETHODIMP nsPrinterEnumeratorGTK::InitPrintSettingsFromPrinter(const PRUnich
     if (path)
       filename = nsPrintfCString(PATH_MAX, "%s/mozilla.ps", path);
     else
-      filename.Assign("mozilla.ps");  
+      filename.AssignLiteral("mozilla.ps");
   }  
   DO_PR_DEBUG_LOG(("Setting default filename to '%s'\n", filename.get()));
   aPrintSettings->SetToFileName(NS_ConvertUTF8toUTF16(filename).get());
@@ -1030,17 +1028,16 @@ NS_IMETHODIMP nsPrinterEnumeratorGTK::InitPrintSettingsFromPrinter(const PRUnich
     
     mlist = XpuGetMediumSourceSizeList(pdpy, pcontext, &mcount);
     if (mlist) {
-      nsXPIDLCString papername;
+      nsCAutoString papername;
 
       default_medium = &mlist[0]; /* First entry is the default one */
       double total_width  = default_medium->ma1 + default_medium->ma2,
              total_height = default_medium->ma3 + default_medium->ma4;
 
       /* Either "paper" or "tray/paper" */
-      papername.Truncate();
       if (default_medium->tray_name) {
         papername.Append(default_medium->tray_name);
-        papername.Append("/");
+        papername.Append('/');
       }
       papername.Append(default_medium->medium_name);
  
@@ -1062,11 +1059,11 @@ NS_IMETHODIMP nsPrinterEnumeratorGTK::InitPrintSettingsFromPrinter(const PRUnich
         papername.Truncate();
         if (curr->tray_name) {
           papername.Append(curr->tray_name);
-          papername.Append("/");
+          papername.Append('/');
         }
         papername.Append(curr->medium_name);
 
-        printerFeatures.SetPaperRecord(i, papername, PRInt32(total_width), PRInt32(total_height), PR_FALSE);
+        printerFeatures.SetPaperRecord(i, papername.get(), PRInt32(total_width), PRInt32(total_height), PR_FALSE);
       }
       printerFeatures.SetNumPaperSizeRecords(mcount);
 #endif /* SET_PRINTER_FEATURES_VIA_PREFS */
@@ -1188,12 +1185,12 @@ NS_IMETHODIMP nsPrinterEnumeratorGTK::InitPrintSettingsFromPrinter(const PRUnich
 #endif /* SET_PRINTER_FEATURES_VIA_PREFS */
 
     nsXPIDLCString orientation;
-    if (NS_SUCCEEDED(CopyPrinterCharPref(pPrefs, "postscript", printerName, "orientation", getter_Copies(orientation)))) {
-      if (!PL_strcasecmp(orientation, "portrait")) {
+    if (NS_SUCCEEDED(CopyPrinterCharPref(pPrefs, "postscript", printerName, "orientation", orientation))) {
+      if (orientation.LowerCaseEqualsLiteral("portrait")) {
         DO_PR_DEBUG_LOG(("setting default orientation to 'portrait'\n"));
         aPrintSettings->SetOrientation(nsIPrintSettings::kPortraitOrientation);
       }
-      else if (!PL_strcasecmp(orientation, "landscape")) {
+      else if (orientation.LowerCaseEqualsLiteral("landscape")) {
         DO_PR_DEBUG_LOG(("setting default orientation to 'landscape'\n"));
         aPrintSettings->SetOrientation(nsIPrintSettings::kLandscapeOrientation);  
       }
@@ -1245,7 +1242,7 @@ NS_IMETHODIMP nsPrinterEnumeratorGTK::InitPrintSettingsFromPrinter(const PRUnich
     printerFeatures.SetCanChangePaperSize(PR_TRUE);
 #endif /* SET_PRINTER_FEATURES_VIA_PREFS */
     nsXPIDLCString papername;
-    if (NS_SUCCEEDED(CopyPrinterCharPref(pPrefs, "postscript", printerName, "paper_size", getter_Copies(papername)))) {
+    if (NS_SUCCEEDED(CopyPrinterCharPref(pPrefs, "postscript", printerName, "paper_size", papername))) {
       nsPaperSizePS paper;
 
       if (paper.Find(papername)) {
@@ -1293,7 +1290,7 @@ NS_IMETHODIMP nsPrinterEnumeratorGTK::InitPrintSettingsFromPrinter(const PRUnich
     if (hasSpoolerCmd) {
       nsXPIDLCString command;
       if (NS_SUCCEEDED(CopyPrinterCharPref(pPrefs, "postscript",
-            printerName, "print_command", getter_Copies(command)))) {
+            printerName, "print_command", command))) {
         DO_PR_DEBUG_LOG(("setting default print command to '%s'\n",
             command.get()));
         aPrintSettings->SetPrintCommand(NS_ConvertUTF8toUTF16(command).get());
